template define in h, and implement in cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,9 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(ordering thread_/ordering_.cpp)
 add_executable(operator lang/overload_/class_8.cpp)
+
+FILE(GLOB static_inline_src ./lang/static_inline/*.cpp)
+add_executable(static_inline ${static_inline_src})   
+
+FILE(GLOB t_h_cpp_src ./t/h_cpp/*.cpp)
+add_executable(t_h_cpp ${t_h_cpp_src})  
